--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ body {
     transition: 0.3s ease;
 }
 
+body.menu-open {
+    overflow: hidden;
+    height: 100vh;
+}
+
 /* NAVBAR */
 
 .navbar {
